# MangakAI

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.backend.prod  Makefile  README.md  alembic.ini  app.py  celery_app.py  celerybeat-schedule.db  database.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  list_tasks.py  main.py  manga.py  pyproject.toml  server.py  utils.py  websocket_manager.py
alembic/: env.py
alembic/versions/: 2fd786bd48cf_auto_migration.py  9cf552681961_add_style_preference_fields_to_manga_.py  c5f7131fd383_add_panel_regeneration_fields_to_.py
api/: __init__.py  async_manga.py  websocket.py
docs/: README.md  async-solution-implementation.md  monitoring-operations-guide.md  overseas-deployment-guide.md  technical-solution.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: AppRouter.jsx  AsyncMangaGenerator.jsx
frontend/src/services/: api.js  websocket.js
k8s/production/: configmap.yaml  deployments.yaml  namespace.yaml  secrets.yaml
models/: __init__.py  manga_models.py
monitoring/: __init__.py  metrics.py
scripts/: setup.sh
storage/: __init__.py  cloud_storage.py
tasks/: __init__.py  maintenance_tasks.py  manga_tasks.py
